--- a/app/src/main/res/layout/activity_resultado.xml
+++ b/app/src/main/res/layout/activity_resultado.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Resultado">
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="129dp"
         android:layout_height="wrap_content"
-        android:text="Resultado:"/>
+        android:layout_margin="40dp"
+        android:text="Resultado:" />
 
     <TextView
         android:id="@+id/resultado"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/textView"
-        android:layout_marginLeft="16dp"
+        android:layout_width="211dp"
+        android:layout_height="36dp"
         android:layout_centerVertical="true"
-        android:text=""
-        />
+        android:layout_marginLeft="60dp"
+        android:text="" />
 
 </LinearLayout>
